--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.18.4",
     "nuxt": "^3.12.4",
     "vue": "latest"
   }
