--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.5.0",
     "@nuxt/ui": "^2.18.4",
     "nuxt": "^3.12.4",
     "vue": "latest"
