--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.22",
+    "@heroicons/vue": "^2.1.5",
     "@nuxt/eslint": "^0.5.0",
     "@nuxt/ui": "^2.18.4",
     "nuxt": "^3.12.4",
-    "vue": "latest"
+    "vue": "latest",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@iconify-json/heroicons": "^1.1.24"
   }
 }
