--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@heroicons/vue": "^2.1.5",
     "@nuxt/eslint": "^0.5.0",
     "@nuxt/ui": "^2.18.4",
+    "@prisma/nuxt": "^0.0.35",
     "nuxt": "^3.12.4",
     "vue": "latest",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.24"
+    "@iconify-json/heroicons": "^1.1.24",
+    "@prisma/client": "^5.18.0"
   }
 }
