--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,14 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
+
+# 项目验证 Secret
+AUTH_SECRET="YOUR SECRET"
+# JWT 签发者
+COOKIE_DOMAIN="YOUR DOMAIN"
+# Access Token 在 nuxt.config.ts 中的配置，与下面 AUTH_ACCESS_EXPIRES_IN 相同，需要将其转换为秒，例如 10m = 600
+AUTH_MAX_AGE_IN_SECONDS=600
+# Access Token 过期时间
+AUTH_ACCESS_EXPIRES_IN="10m"
+# Refresh Token 过期时间
+AUTH_REFRESH_EXPIRES_IN="7d"
