--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/eslint": "^0.5.0",
     "@nuxt/ui": "^2.18.4",
     "@prisma/nuxt": "^0.0.35",
+    "@sidebase/nuxt-auth": "^0.8.2",
     "nuxt": "^3.12.4",
     "vue": "latest",
     "zod": "^3.23.8"
