新增 UserDropdown 组件； 修改 AppHeader.vue 组件；

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,16 @@ AUTH_MAX_AGE_IN_SECONDS=600
 AUTH_ACCESS_EXPIRES_IN="10m"
 # Refresh Token 过期时间
 AUTH_REFRESH_EXPIRES_IN="7d"
+
+# 项目简称
+NUXT_PROJECT_NAME="YOUR PROJECT NAME"
+# 项目全称
+NUXT_PROJECT_FULL_NAME="YOUR PROJECT FULL NAME"
+# 项目描述
+NUXT_PROJECT_DESCRIPTION="YOUR PROJECT DESCRIPTION"
+# 项目代码托管存储库地址
+NUXT_PROJECT_REPOSITORY_URL=""
+# 项目许可证类型
+NUXT_PROJECT_LICENSE_TYPE="MIT"
+# 项目许可证地址
+NUXT_PROJECT_LICENSE_URL=""
