--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
-    "@nuxt/eslint": "^0.5.0",
+    "@nuxt/eslint": "^0.5.1",
     "@nuxt/ui": "^2.18.4",
     "@prisma/nuxt": "^0.0.35",
     "@sidebase/nuxt-auth": "^0.8.2",
@@ -31,6 +31,7 @@
     "@iconify-json/mdi": "^1.1.68",
     "@prisma/client": "^5.18.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "typescript": "^5.5.4"
   }
 }
