--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
-    "@nuxt/eslint": "^0.5.1",
+    "@nuxt/eslint": "^0.5.3",
     "@nuxt/ui": "^2.18.4",
     "@prisma/nuxt": "^0.0.35",
     "@sidebase/nuxt-auth": "^0.9.1",
@@ -29,9 +29,10 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.24",
     "@iconify-json/mdi": "^1.1.68",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "prisma": "^5.19.0",
     "typescript": "^5.5.4"
   }
 }
