--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
-    "@nuxt/eslint": "^0.5.3",
+    "@nuxt/eslint": "^0.5.4",
     "@nuxt/ui": "^2.18.4",
     "@prisma/nuxt": "^0.0.35",
     "@sidebase/nuxt-auth": "^0.9.1",
@@ -24,6 +24,8 @@
     "cos-js-sdk-v5": "^1.8.4",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.13.0",
+    "qcloud-cos-sts": "^3.1.1",
+    "qs": "^6.13.0",
     "vue": "latest",
     "zod": "^3.23.8"
   },
