feat(avatar.vue, getTmpKey.ts, nuxt.config.ts, setting.vue): 新增上传图片到对象存储功能；

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,9 @@ NUXT_PROJECT_REPOSITORY_URL=""
 NUXT_PROJECT_LICENSE_TYPE="MIT"
 # 项目许可证地址
 NUXT_PROJECT_LICENSE_URL=""
+
+# 对象存储配置
+NUXT_COS_SECRET_ID="SECRET ID"
+NUXT_COS_SECRET_KEY="SECRET KEY"
+NUXT_COS_BUCKET="BUCKET NAME"
+NUXT_COS_REGION="REGION NAME"
